2003-05-22  MINAMI Hirokazu  <minami@mistfall.net>

	* Removed unused fuctions from x_window.c.

2003-05-22 Araki Ken <arakiken@users.sf.net>

	* Compilation failed in ml_logical_visual.c. Fixed.
	  (Thanks to Kubota Tomohiro san)

2003-05-20  MINAMI Hirokazu  <minami@mistfall.net>

	* make XDND handler call start/stop_vt100_cmd()
	before/after processing a config sequence.

2003-05-20 Araki Ken <arakiken@users.sf.net>

	* Fixed some problems in resizing window.
	  (Thanks to >>796)

2003-05-19  MINAMI Hirokazu  <minami@mistfall.net>

	* support DND from nautilus's background setting dialog. 
	* support application/x-color as DND type and
	refrect the color to the window's background.
	* added lots of dubug messages.

	* In DND session, "text/x-mlterm.config" is now preffered
	to other mime types. 

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* Renamed x_font_set_x{ft_}font() to x_font_load_x{ft_}font().

2003-05-18  MINAMI Hirokazu  <minami@mistfall.net>

	* Really fixed the XDND bug 
	(Thanks to Seiichi SATO san)

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* BEL character after ESC ] ... was ignored. Fixed.

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* Supported ESC [ ? 6 h(relative origin), ESC [ ? 6 l(absolute origin).
	* Supported ESC [ ? 7 h(auto wrap), ESC [ ? 7 l(no auto wrap).

2003-05-18  MINAMI Hirokazu  <minami@mistfall.net>

	* fixed yet another XDND bug.

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* Support cursor control characters possibly anywhere inside escape sequences.

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* If bold font not found in anti-alias mode, pseudo bold processing enabled.
	  (Thanks to >>619)

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* Set adhoc_right_align of bidi_logical_visual off.

2003-05-17  MINAMI Hirokazu  <minami@mistfall.net>

	* mlterm now accepts configuration strings 
	through XDND protocol.

2003-05-17 Araki Ken <arakiken@users.sf.net>
